Added CreateSession command and all dependencies needed for it.

--- a/Backend/CommandSide/WebApplication/WebApplication.csproj
+++ b/Backend/CommandSide/WebApplication/WebApplication.csproj
@@ -4,5 +4,10 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ApplicationServices\ApplicationServices.csproj" />
+      <ProjectReference Include="..\EventStoreAdapter\EventStoreAdapter.csproj" />
+    </ItemGroup>
+
 
 </Project>
