--- a/Backend/QuerySide/WebSocketNotifier/WebSocketNotifier.csproj
+++ b/Backend/QuerySide/WebSocketNotifier/WebSocketNotifier.csproj
@@ -8,4 +8,8 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.3" />
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\WebSocketAdapter\WebSocketAdapter.csproj" />
+    </ItemGroup>
 </Project>
