--- a/Backend/QuerySide/WebSocketAdapter/WebSocketAdapter.csproj
+++ b/Backend/QuerySide/WebSocketAdapter/WebSocketAdapter.csproj
@@ -9,7 +9,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="WebSocketSharp" Version="1.0.3-rc11" />
+      <PackageReference Include="websocketsharp.core" Version="1.0.0" />
     </ItemGroup>
 
 </Project>
