Wire up application dependencies.

--- a/Backend/QuerySide/WebSocketNotifier/WebSocketNotifier.csproj
+++ b/Backend/QuerySide/WebSocketNotifier/WebSocketNotifier.csproj
@@ -10,6 +10,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\ApplicationServices\ApplicationServices.csproj" />
+      <ProjectReference Include="..\EventStoreAdapter\EventStoreAdapter.csproj" />
       <ProjectReference Include="..\WebSocketAdapter\WebSocketAdapter.csproj" />
     </ItemGroup>
 </Project>
