--- a/Backend/QuerySide/ApplicationServices/ApplicationServices.csproj
+++ b/Backend/QuerySide/ApplicationServices/ApplicationServices.csproj
@@ -4,4 +4,12 @@
         <TargetFramework>netstandard2.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Ports\Ports.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    </ItemGroup>
+
 </Project>
