--- a/Backend/QuerySide/WebSocketNotifier/appsettings.json
+++ b/Backend/QuerySide/WebSocketNotifier/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AppSettings" : {
+    "EventStoreConnectionString" : "tcp://admin:changeit@localhost:1113"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
