--- a/Backend/QuerySide/WebSocketNotifier/appsettings.json
+++ b/Backend/QuerySide/WebSocketNotifier/appsettings.json
@@ -1,6 +1,7 @@
 {
   "AppSettings" : {
-    "EventStoreConnectionString" : "tcp://admin:changeit@localhost:1113"
+    "EventStoreConnectionString" : "tcp://admin:changeit@localhost:1113",
+    "AllSessionEventsProjectionName": "AllSessionEvents"
   },
   
   "Logging": {
