Every websocket connection now has catch up subscription.

--- a/Backend/QuerySide/WebSocketNotifier/appsettings.json
+++ b/Backend/QuerySide/WebSocketNotifier/appsettings.json
@@ -1,7 +1,6 @@
 {
   "AppSettings" : {
-    "EventStoreConnectionString" : "tcp://admin:changeit@localhost:1113",
-    "AllSessionEventsProjectionName": "AllSessionEvents"
+    "EventStoreConnectionString": "tcp://admin:changeit@localhost:1113"
   },
   
   "Logging": {
